Update missed styles

--- a/src/components/about-page/Auditors/style.scss
+++ b/src/components/about-page/Auditors/style.scss
@@ -5,6 +5,7 @@
   &__auditors-wrapper {
     padding: 96px 0;
     background-color: $c_black;
+    border-bottom: 1px solid #1f252e;
   }
 
   &__auditors {
