--- a/src/components/about-page/FoundingMembers/style.scss
+++ b/src/components/about-page/FoundingMembers/style.scss
@@ -112,7 +112,7 @@
       &__show-all {
         @include h7;
 
-        margin: 32px;
+        margin: 32px auto 0 auto;
         color: $c_blue-ribbon;
         cursor: pointer;
       }
@@ -346,7 +346,7 @@
           margin-top: 64px;
 
           &__info {
-            margin-top: 10px;
+            margin-top: 8px;
 
             &__modal {
               right: 80px;
