--- a/src/components/token-page/Hero/style.scss
+++ b/src/components/token-page/Hero/style.scss
@@ -1,38 +1,47 @@
-@import '../../../styles/main';
+@import '../../../styles/_main.scss';
+@import '../../../pages/style.scss';
 
-.TokensPage {
-  &__header {
-    padding: 56px 0 80px 0;
+.TokenPage {
+  &__hero-background {
+    width: 100%;
+    height: 100%;
     background-color: $c_black;
+  }
+
+  &__hero-wrapper {
+    @extend %largeContainer;
+
+    position: relative;
+    padding: 128px 0;
+    background-image: url('../../../assets/svg/token/joy-token-hero-background.svg');
+    background-position: top right;
+    background-repeat: no-repeat;
   }
 
   &__hero {
     @extend %container;
 
-    display: grid;
-    column-gap: 34px;
-    grid-template-columns: 1fr 1.5fr;
+    display: flex;
+    justify-content: space-between;
+    gap: 30px;
 
     &__content {
       display: flex;
       flex-direction: column;
       justify-content: center;
+      max-width: 606px;
     }
 
     &__title {
-      font-family: $font-primary;
-      font-size: 72px;
-      line-height: 80px;
-      letter-spacing: 0;
+      @include h1;
+
       color: $c_white;
     }
 
     &__text {
-      margin-top: 12px;
-      font-family: $font-secondary;
-      font-size: 20px;
-      line-height: 28px;
-      letter-spacing: 0;
+      @include base-1;
+
+      margin-top: 16px;
       color: $c_grayc_chateau;
     }
 
@@ -42,9 +51,14 @@
       margin-top: 32px;
     }
 
-    &__image {
-      &--alt {
-        display: none;
+    &__illustration {
+      display: grid;
+      width: 606px;
+      height: 304px;
+      place-items: center;
+
+      &__image {
+        margin-left: 25px;
       }
     }
   }
