--- a/src/components/token-page/Hero/style.scss
+++ b/src/components/token-page/Hero/style.scss
@@ -1,6 +1,29 @@
 @import '../../../styles/_main.scss';
 @import '../../../pages/style.scss';
 
+@mixin loading-bar-animation ($translateAmount, $duration, $delay) {
+  @keyframes animate-tokenstats-loading-bar {
+    0% {
+      transform: translateX(0);
+    }
+
+    75% {
+      transform: translateX($translateAmount);
+    }
+
+    100% {
+      transform: translateX($translateAmount);
+    }
+  }
+
+  animation-delay: $delay;
+  animation-duration: $duration;
+  animation-iteration-count: infinite;
+  animation-name: animate-tokenstats-loading-bar;
+  // TODO: Maybe this can be looked into?
+  animation-timing-function: ease;
+}
+
 .TokenPage {
   &__hero-background {
     width: 100%;
@@ -12,7 +35,7 @@
     @extend %largeContainer;
 
     position: relative;
-    padding: 128px 0;
+    padding: 128px 0 96px 0;
     background-image: url('../../../assets/svg/token/joy-token-hero-background.svg');
     background-position: top right;
     background-repeat: no-repeat;
@@ -23,6 +46,7 @@
 
     display: flex;
     justify-content: space-between;
+    margin-bottom: 128px;
     gap: 30px;
 
     &__content {
@@ -69,155 +93,201 @@
     margin-top: 40px;
   }
 
-  &__tokenstats-title {
-    font-family: $font-primary;
-    font-size: 24px;
-    line-height: 32px;
-    letter-spacing: 0;
-    color: $c_white;
-  }
-
   &__tokenstats {
     display: grid;
-    margin-top: 24px;
-    overflow-x: hidden;
-    column-gap: 30px;
-    grid-template-columns: repeat(3, 380px);
-    grid-template-rows: 132px;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    gap: 16px;
+    grid-template-columns: repeat(auto-fit, 288px);
 
     &__item {
-      padding: 18px 24px 24px 24px;
+      position: relative;
+      height: 108px;
+      padding: 20px 24px 20px 24px;
+      overflow: hidden;
       background-color: #111316;
 
-      &--placeholder {
-        animation: 1s cubic-bezier(.4, 0, .6, 1) 0s infinite normal none running loading;
+      &--disabled {
+        overflow: unset;
       }
 
-      &__title-placeholder {
+      &__loading-bar {
+        @include loading-bar-animation(428px, 4s, 0s);
+
+        position: absolute;
+        top: 0;
+        left: -140px;
         width: 140px;
-        height: 16px;
-        margin-bottom: 20px;
-        background-color: #1f252e;
-        animation: 1s cubic-bezier(.4, 0, .6, 1) 0s infinite normal none running loading-metric-text;
+        height: 2px;
+        min-width: 140px;
+        min-height: 2px;
+        background-color: #5c6475;
       }
 
       &__title {
-        font-family: $font-secondary;
-        font-size: 16px;
-        line-height: 24px;
-        letter-spacing: 0;
+        @include base-4;
+
         color: $c_grayc_chateau;
-        animation: animate-tokenstats-text .5s linear;
-      }
-
-      &__value-placeholder {
-        width: 284px;
-        height: 48px;
-        background-color: #1f252e;
-        animation: 1s cubic-bezier(.4, 0, .6, 1) 0s infinite normal none running loading-metric-text;
       }
 
       &__value {
-        font-family: $font-primary;
-        font-size: 48px;
-        line-height: 56px;
-        letter-spacing: 0;
-        color: $c_white;
-        animation: animate-tokenstats-text .5s linear;
-      }
-    }
-  }
+        @include h5;
 
-  @media #{$screen-max-lg} {
-    &__hero {
-      &__title {
-        font-size: 60px;
-        line-height: 68px;
-      }
-    }
-  }
-
-  @media #{$screen-max-md} {
-    &__header {
-      padding-top: 64px;
-    }
-
-    &__hero {
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      width: 85%;
-
-      &__content {
+        display: flex;
         align-items: center;
+        height: 36px;
+        margin-top: 12px;
+        color: $c_white;
+
+        &--loading {
+          color: #5c6475;
+        }
+
+        &--disabled {
+          color: #a7aeb7;
+        }
+
+        &__joy-icon {
+          margin-right: 8px;
+        }
       }
 
-      &__title {
-        text-align: center;
+      &__tooltip-wrapper {
+        position: absolute;
+        right: 26px;
+        bottom: 32px;
+        width: 16px;
+        height: 16px;
+        margin: auto;
       }
 
-      &__text {
-        text-align: center;
-      }
+      &__tooltip {
+        &__icon {
+          fill: #a7aeb7;
+        }
 
-      &__image {
-        width: 85%;
-        margin-top: 40px;
-      }
-    }
+        &:hover &__icon {
+          fill: $c_white;
+        }
 
-    &__tokenstats-wrapper {
-      padding-left: 20px;
-    }
+        &__modal {
+          @include base-5;
 
-    &__tokenstats {
-      &__value {
-        font-size: 40px;
-        line-height: 48px;
-      }
-    }
-  }
+          position: absolute;
+          right: 0;
+          bottom: 25px;
+          width: 240px;
+          height: auto;
+          padding: 12px 12px 18px 12px;
+          color: #1f252e;
+          background-color: #dee3e9;
+          opacity: 0;
+          visibility: hidden;
+          transition: visibility .3s linear, opacity .3s linear;
+          transition-delay: .1s;
+          clip-path:
+            polygon(
+              0% 0%,
+              100% 0%,
+              100% calc(100% - 6px),
+              100% 100%,
+              calc(100% - 8px) calc(100% - 6px),
+              0% calc(100% - 6px)
+            );
+        }
 
-  @media #{$screen-max-sm} {
-    &__hero {
-      &__link {
-        width: 335px;
-        height: 60px;
-      }
-    }
-  }
-
-  @media (max-width: 500px) {
-    &__hero {
-      width: 335px;
-
-      &__title {
-        font-size: 40px;
-        line-height: 48px;
-        text-align: left;
-      }
-
-      &__text {
-        font-size: 16px;
-        line-height: 24px;
-        text-align: left;
-      }
-
-      &__image {
-        display: none;
-        width: auto;
-
-        &--alt {
-          display: block;
-          margin-top: 40px;
+        &:hover &__modal {
+          opacity: 1;
+          visibility: visible;
         }
       }
     }
   }
+
+  // @media #{$screen-max-lg} {
+  //   &__hero {
+  //     &__title {
+  //       font-size: 60px;
+  //       line-height: 68px;
+  //     }
+  //   }
+  // }
+
+  // @media #{$screen-max-md} {
+  //   &__header {
+  //     padding-top: 64px;
+  //   }
+
+  //   &__hero {
+  //     display: flex;
+  //     align-items: center;
+  //     flex-direction: column;
+  //     width: 85%;
+
+  //     &__content {
+  //       align-items: center;
+  //     }
+
+  //     &__title {
+  //       text-align: center;
+  //     }
+
+  //     &__text {
+  //       text-align: center;
+  //     }
+
+  //     &__image {
+  //       width: 85%;
+  //       margin-top: 40px;
+  //     }
+  //   }
+
+  //   &__tokenstats-wrapper {
+  //     padding-left: 20px;
+  //   }
+
+  //   &__tokenstats {
+  //     &__value {
+  //       font-size: 40px;
+  //       line-height: 48px;
+  //     }
+  //   }
+  // }
+
+  // @media #{$screen-max-sm} {
+  //   &__hero {
+  //     &__link {
+  //       width: 335px;
+  //       height: 60px;
+  //     }
+  //   }
+  // }
+
+  // @media (max-width: 500px) {
+  //   &__hero {
+  //     width: 335px;
+
+  //     &__title {
+  //       font-size: 40px;
+  //       line-height: 48px;
+  //       text-align: left;
+  //     }
+
+  //     &__text {
+  //       font-size: 16px;
+  //       line-height: 24px;
+  //       text-align: left;
+  //     }
+
+  //     &__image {
+  //       display: none;
+  //       width: auto;
+
+  //       &--alt {
+  //         display: block;
+  //         margin-top: 40px;
+  //       }
+  //     }
+  //   }
+  // }
 }
 
 @keyframes loading {
@@ -227,16 +297,6 @@
 
   50% {
     opacity: .5;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes animate-tokenstats-text {
-  0% {
-    opacity: 0;
   }
 
   100% {
