--- a/src/components/token-page/TokenInformation/style.scss
+++ b/src/components/token-page/TokenInformation/style.scss
@@ -1,19 +1,10 @@
 @import '../../../styles/main';
+@import '../../../pages/style.scss';
 
-.TokensPage {
+.TokenPage {
   &__tokeninfo-wrapper {
-    padding: 150px 0;
-    background-color: $c_white;
-  }
-
-  &__tokeninfo-title {
-    @extend %container;
-
-    font-family: $font-primary;
-    font-size: 48px;
-    line-height: 56px;
-    letter-spacing: 0;
-    text-align: center;
+    padding: 96px 0;
+    background-color: #f2f5f9;
   }
 
   &__tokeninfo {
@@ -21,49 +12,83 @@
 
     margin-top: 80px;
 
-    &__item {
-      display: grid;
-      margin: 16px 0;
-      padding: 32px;
-      cursor: pointer;
-      transition: transform .5s, box-shadow .5s, outline .2s;
-      grid-template-columns: auto 32px;
+    &__header {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      max-width: 820px;
+      margin: 0 auto;
 
-      &:hover {
-        outline: 2px solid #000;
-        transform: translate(-5px, -5px);
-        box-shadow: 8px 8px 0 -2px #000;
-      }
+      &__section-title {
+        @include section-title;
 
-      &--active {
-        outline: 2px solid $c_blue-ribbon;
-
-        &:hover {
-          outline: 2px solid $c_blue-ribbon;
-          transform: unset;
-          box-shadow: none;
-        }
-      }
-
-      &__content {
-        padding-right: 20px;
+        margin: 0 auto;
+        color: $c_blue-ribbon;
       }
 
       &__title {
-        font-family: $font-primary;
-        font-size: 32px;
-        line-height: 40px;
-        letter-spacing: 0;
+        @include h3;
+
+        margin-top: 4px;
+        color: #1a1a1a;
+        text-align: center;
+      }
+
+      &__subtitle {
+        @include base-1;
+
+        margin-top: 16px;
+        color: #a7aeb7;
+        text-align: center;
+      }
+    }
+
+    &__items {
+      width: 818px;
+      margin: 80px auto 0 auto;
+      margin-top: 80px;
+    }
+
+    &__item {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      padding: 24px 0;
+
+      &:not(:last-child) {
+        border-bottom: 1px solid #dee3e9;
+      }
+
+      &__title-section {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+
+        &__title {
+          @include h6;
+
+          color: #1f252e;
+        }
+
+        &__icon {
+          width: 16px;
+          margin-top: 12px;
+          color: #a7aeb7;
+          transition: .3s transform, .5s color;
+
+          &--active {
+            & > path:last-child {
+              transform: scaleY(0);
+            }
+          }
+        }
       }
 
       &__text {
+        @include base-3;
+
         display: none;
-        width: fit-content;
-        margin-top: 24px;
-        font-family: $font-secondary;
-        font-size: 20px;
-        line-height: 32px;
-        letter-spacing: 0;
+        margin-top: 16px;
         color: #656565;
 
         &--active {
@@ -74,65 +99,53 @@
           margin: 10px 0;
         }
       }
-
-      &__icon {
-        width: 20px;
-        margin-top: 12px;
-        color: $c_blue-ribbon;
-        transform: rotate(45deg);
-        transition: .3s transform, .5s color;
-
-        &--active {
-          transform: rotate(0);
-        }
-      }
     }
   }
 
-  @media #{$screen-max-md} {
-    &__tokeninfo {
-      padding: 0 20px;
-    }
-  }
+  // @media #{$screen-max-md} {
+  //   &__tokeninfo {
+  //     padding: 0 20px;
+  //   }
+  // }
 
-  @media #{$screen-max-sm} {
-    &__tokeninfo-title {
-      font-size: 40px;
-      line-height: 48px;
-    }
+  // @media #{$screen-max-sm} {
+  //   &__tokeninfo-title {
+  //     font-size: 40px;
+  //     line-height: 48px;
+  //   }
 
-    &__tokeninfo {
-      margin-top: 44px;
+  //   &__tokeninfo {
+  //     margin-top: 44px;
 
-      &__item {
-        position: relative;
-        grid-template-columns: auto;
+  //     &__item {
+  //       position: relative;
+  //       grid-template-columns: auto;
 
-        &__content {
-          padding: 0;
-        }
+  //       &__content {
+  //         padding: 0;
+  //       }
 
-        &__title {
-          padding-right: 32px;
-          font-size: 24px;
-          line-height: 32px;
-        }
+  //       &__title {
+  //         padding-right: 32px;
+  //         font-size: 24px;
+  //         line-height: 32px;
+  //       }
 
-        &__text {
-          font-size: 14px;
-          line-height: 20px;
-        }
+  //       &__text {
+  //         font-size: 14px;
+  //         line-height: 20px;
+  //       }
 
-        &__icon {
-          position: absolute;
-          top: 24px;
-          right: 32px;
+  //       &__icon {
+  //         position: absolute;
+  //         top: 24px;
+  //         right: 32px;
 
-          &--active {
-            color: #3b3b3b;
-          }
-        }
-      }
-    }
-  }
+  //         &--active {
+  //           color: #3b3b3b;
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 }
