--- a/src/components/token-page/Wallets/style.scss
+++ b/src/components/token-page/Wallets/style.scss
@@ -60,9 +60,10 @@
 
     &__items {
       display: grid;
+      justify-content: center;
       margin-top: 80px;
       gap: 30px;
-      grid-template-columns: repeat(3, minmax(300px, 394px));
+      grid-template-columns: repeat(auto-fill, 380px);
     }
 
     &__item {
@@ -99,6 +100,8 @@
     }
 
     &__info {
+      @include base-5;
+
       display: flex;
       align-items: center;
       justify-content: center;
@@ -106,8 +109,80 @@
       color: #5c6475;
 
       &__icon {
+        width: 16px;
+        height: 16px;
+        min-width: 16px;
+        min-height: 16px;
         margin-right: 6px;
         fill: #5c6475;
+      }
+    }
+  }
+
+  @media #{$screen-max-md} {
+    &__wallets {
+      &__header {
+        max-width: 650px;
+      }
+
+      &__info {
+        align-items: unset;
+        max-width: 650px;
+        margin: 32px auto 0 auto;
+      }
+    }
+  }
+
+  @media #{$screen-max-sm} {
+    &__wallets-wrapper {
+      padding: 80px 0;
+    }
+
+    &__wallets {
+      padding: 0 20px;
+
+      &__header {
+        max-width: 550px;
+
+        &__title {
+          @include h4;
+        }
+
+        &__subtitle {
+          @include base-3;
+        }
+      }
+
+      &__items {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: unset;
+        margin-top: 64px;
+      }
+
+      &__item {
+        width: 100%;
+        height: 188px;
+        max-width: 335px;
+
+        &__image-wrapper {
+          @include logo-wrapper(48px, 48px);
+        }
+
+        &__name {
+          @include h7;
+
+          margin-top: 24px;
+        }
+
+        &__link {
+          @include h9;
+        }
+      }
+
+      &__info {
+        max-width: 335px;
       }
     }
   }
