--- a/src/components/index-page/VideoNFTs/style.scss
+++ b/src/components/index-page/VideoNFTs/style.scss
@@ -137,6 +137,7 @@
     &__items-wrapper {
       display: flex;
       max-width: 1440px;
+      min-height: 354px;
       margin: 0 auto;
       margin-top: 32px;
       overflow: hidden;
