--- a/src/components/index-page/Payouts/style.scss
+++ b/src/components/index-page/Payouts/style.scss
@@ -168,6 +168,7 @@
     &__items-wrapper {
       display: flex;
       max-width: 1440px;
+      min-height: 200px;
       margin: 0 auto;
       margin-top: 32px;
       overflow: hidden;
@@ -197,6 +198,7 @@
       &__image {
         width: 40px;
         height: 40px;
+        overflow: hidden;
         background: rgba(0, 0, 0, .3);
         border-radius: 50%;
 
@@ -418,7 +420,7 @@
     }
   }
 
-  @media (max-width: 600px) {
+  @media (max-width: 800px) {
     &__payouts-carousel {
       &__title-and-info {
         flex-direction: column;
