Updated logic and padding in tokenstats component

--- a/src/components/token-page/Hero/style.scss
+++ b/src/components/token-page/Hero/style.scss
@@ -101,7 +101,7 @@
     &__item {
       position: relative;
       height: 108px;
-      padding: 20px 24px 20px 24px;
+      padding: 20px;
       overflow: hidden;
       background-color: #111316;
 
