--- a/src/components/token-page/Hero/style.scss
+++ b/src/components/token-page/Hero/style.scss
@@ -87,6 +87,11 @@
     }
   }
 
+  &__tokenstats-wrapper-separate {
+    padding: 0 10px 60px 10px;
+    background-color: black;
+  }
+
   &__tokenstats-wrapper {
     @extend %container;
 
@@ -97,6 +102,13 @@
     display: grid;
     gap: 16px;
     grid-template-columns: repeat(auto-fit, 288px);
+
+    &--separate {
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      background-color: black;
+    }
 
     &__item {
       position: relative;
@@ -283,6 +295,12 @@
 
     &__tokenstats-wrapper {
       margin-top: 0;
+    }
+  }
+
+  @media (max-width: 725px) {
+    &__tokenstats-wrapper-separate {
+      padding-top: 50px;
     }
   }
 
