--- a/src/components/token-page/Exchanges/style.scss
+++ b/src/components/token-page/Exchanges/style.scss
@@ -1,6 +1,23 @@
 @import '../../../styles/_main.scss';
 @import '../../../pages/style.scss';
 
+@mixin logo-wrapper($height, $width) {
+  position: relative;
+  width: $height;
+  height: $width;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    content: '';
+    box-shadow: inset 0 0 0 1px rgba(163, 195, 242, .19);
+  }
+}
+
 .TokenPage {
   &__exchanges-wrapper {
     padding: 96px 0;
@@ -41,73 +58,50 @@
       }
     }
 
-    &__newsletter {
+    &__items {
       display: flex;
-      align-items: center;
-      flex-direction: column;
       justify-content: center;
-      height: 400px;
-      max-width: 1200px;
       margin-top: 80px;
-      padding: 48px 24px;
+    }
+
+    &__item {
+      width: 394px;
+      height: 320px;
+      padding: 32px;
+      cursor: pointer;
       background-color: $c_white;
+      transition: all .3s;
 
-      &__title {
-        @include h5;
-
-        color: #1f252e;
-        text-align: center;
+      &:hover {
+        transform: translate(-7.2px, -8px);
+        box-shadow: 7.2px 8px 0 0 $c_blue-ribbon;
       }
 
-      &__subtitle {
+      &__image-wrapper {
+        @include logo-wrapper(64px, 64px);
+      }
+
+      &__image {
+        width: 100%;
+        height: 100%;
+        border-radius: 12px;
+      }
+
+      &__name {
+        @include h6;
+
+        margin-top: 40px;
+      }
+
+      &__description {
         @include base-3;
 
-        max-width: 606px;
         margin-top: 8px;
         color: #5c6475;
-        text-align: center;
       }
 
-      &__form {
-        display: flex;
+      &__link {
         margin-top: 32px;
-        gap: 20px;
-
-        &__input {
-          width: 320px;
-          height: 60px;
-          padding: 16px 18px;
-          font-family: $font-secondary;
-          font-size: 20px;
-          font-weight: 400;
-          line-height: 28px;
-          letter-spacing: -.4000000059604645px;
-          text-align: left;
-          border: 2px solid #dee3e9;
-
-          &::placeholder {
-            color: #a5adb9;
-          }
-        }
-
-        &__button {
-          width: 198px;
-          height: 60px;
-          padding: 18px 21px;
-          font-family: $font-primary;
-          font-size: 18px;
-          font-weight: 400;
-          line-height: 24px;
-          letter-spacing: 0;
-          color: $c_white;
-          text-align: center;
-          cursor: pointer;
-          background-color: $c_blue-ribbon;
-
-          &:hover {
-            background-color: #322af1;
-          }
-        }
       }
     }
   }
@@ -138,44 +132,31 @@
         }
       }
 
-      &__newsletter {
-        height: auto;
+      &__items {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: unset;
         margin-top: 64px;
-
-        &__title {
-          @include h6;
-        }
-
-        &__subtitle {
-          @include base-4;
-        }
-
-        &__form {
-          align-items: center;
-          flex-direction: column;
-          width: 100%;
-          gap: 12px;
-
-          &__input {
-            width: 450px;
-          }
-
-          &__button {
-            width: 287px;
-          }
-        }
       }
-    }
-  }
 
-  @media (max-width: 550px) {
-    &__exchanges {
-      &__newsletter {
-        &__form {
-          &__input,
-          &__button {
-            width: 100%;
-          }
+      &__item {
+        height: 252px;
+        max-width: 335px;
+        padding: 24px;
+
+        &__image-wrapper {
+          @include logo-wrapper(48px, 48px);
+        }
+
+        &__name {
+          @include h7;
+
+          margin-top: 24px;
+        }
+
+        &__link {
+          @include h9;
         }
       }
     }
